APERTA-10978 flexbox used to fix shifting label

--- a/app/assets/stylesheets/components/card-content/check-box.scss
+++ b/app/assets/stylesheets/components/card-content/check-box.scss
@@ -7,3 +7,11 @@
     padding-left: 20px;
   }
 }
+
+div.card-content-flex-box {
+  display: inline-flex;
+
+  div.flex-label {
+    padding: 0em 1em;
+  }
+}
